--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Trier par prix croissant</button>
+				<br>
+				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-descripton">
+					Filtrer par description
+				</button>
+				<br>
+				<button class="btn-decroissant">
+					Filtrer par ordre decroissant
+				</button>
 			</section>
 
 			<!-- Fiches produits -->
