Ajout des <div> pour les produits disponible et abordable

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<div class="produitAbordables">
+					<p>Pièces abordables : </p>
+				</div>
+				<div class="piecesDisponible">
+					<p>Pièces disponibles :</p>
+				</div>
 			</section>
 		</main>
 	</body>
