Ajout d'un input range pour filtrer les prix

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 				<button class="btn-decroissant">
 					Filtrer par ordre decroissant
 				</button>
+				<br>
+				<label for="input-prix">Prix maximum :</label><br>
+				<input type="range" id="input-prix" name="input-prix" min="0" max="60" step="5">
+				<span id="valeur-prix">0</span> €
 			</section>
 
 			<!-- Fiches produits -->
