--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 				<label for="input-prix">Prix maximum :</label><br>
 				<input type="range" id="input-prix" name="input-prix" min="0" max="60" step="5">
 				<span id="valeur-prix">0</span> €
+
+				<h3>Ajouter un avis</h3>
+				<form class="formulaire-avis">
+					Identifiant de la pièce :<br>
+					<input type="number" name="piece-id"><br>
+					Nom d'utilisateur :<br>
+					<input type="text" name="utilisateur"><br>
+					Avis :<br>
+					<input type="text" name="commentaire"><br>
+					<button>Envoyer</button>
+				</form>
 			</section>
 
 			<!-- Fiches produits -->
