--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 					<input type="text" name="utilisateur"><br>
 					Avis :<br>
 					<input type="text" name="commentaire"><br>
+					Nombre d'étoiles :<br>
+					<input type="number" name="nbEtoiles" min="1" max="5" step="1"><br>
 					<button>Envoyer</button>
 				</form>
 			</section>
