--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 					<input type="number" name="nbEtoiles" min="1" max="5" step="1"><br>
 					<button>Envoyer</button>
 				</form>
+				<h3>Données</h3>
+				<button class="btn-maj">Mettre à jour les pièces</button>
 			</section>
 
 			<!-- Fiches produits -->
