--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
 		<script type="module" src="pieces.js"></script>
+		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -44,7 +45,11 @@
 					<button>Envoyer</button>
 				</form>
 				<h3>Données</h3>
-				<button class="btn-maj">Mettre à jour les pièces</button>
+				<button class="btn-maj">Mettre à jour les pièces</button><br>
+				<h3>Aperçu des avis</h3>
+				<canvas id="graphique-avis" width="300" height="300"></canvas>
+				<h3>Statistiques commentaires</h3>
+				<canvas id="graphique-dispo" width="300" height="300"></canvas>
 			</section>
 
 			<!-- Fiches produits -->
